<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/cabecalho"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="right"
        android:padding="1dp"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/conteudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rodape"
        android:layout_below="@id/cabecalho"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-1dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/title_pedido"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_pedido"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="number"
            android:maxLength="18"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_codigo"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="number"
            android:maxLength="18"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_descricao"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="text"
            android:maxLength="18"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtQtde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_qtde"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtQtde"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="number"
            android:maxLength="18"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_valor"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtValor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="numberDecimal"
            android:maxLength="18"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDesconto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_desconto"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtDesconto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="number"
            android:maxLength="18"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/lbl_subtotal"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtSubtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="number"
            android:maxLength="18"
            android:textSize="25dp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3ea4c4"
            android:text="@string/btn_salvar"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3ea4c4"
            android:text="@string/btn_cancelar"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#FFF"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtVersao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:text="@string/lbl_versao"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:text="@string/lbl_copy"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>





