<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/cabecalho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="1dp">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/conteudo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rodape"
        android:layout_below="@id/cabecalho"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-1dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/logo_flex" />


        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/title_configuracao"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layoutCommunicationOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroupCommunication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Comunicação Local"
                    android:tag="1"/>

                <RadioButton
                    android:id="@+id/radioButtonServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Comunicação Servidor"
                    android:tag="2"/>

            </RadioGroup>

        </LinearLayout>




        <TextView
            android:id="@+id/txtIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_config"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtIPServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:digits="0123456789."
            android:maxLength="18"
            android:textSize="18dp"
            android:textStyle="bold"/>



        <Button
            android:id="@+id/btSalvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#3ea4c4"
            android:text="@string/btn_salvar"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btSair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="#3ea4c4"
            android:text="@string/btn_sair"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#FFF"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtVersao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:text="Versão:"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:text="Copyright 2021 SmixSistemas"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
