<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal">


    <LinearLayout
        android:id="@+id/cabecalho"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:padding="1dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/title_teladecliente"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/rodape"
        android:layout_below="@id/cabecalho"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1">


        <RadioGroup
            android:id="@+id/conteudo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:hint="  Nome Completo  "
                android:fontFamily="@font/fontawesome_font"
                android:inputType="text"
                android:maxLength="18"

                android:selectAllOnFocus="false"
                android:textSize="22dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint="  Origem do Cliente "
                android:inputType="number"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />



            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp">


                <RadioButton
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:onClick="botao1"
                    android:text="Pessoa Fisica"
                    android:textSize="16dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="Pessoa Juridica"
                    android:id="@+id/btn1"
                    android:onClick="botao1"
                    android:textSize="16dp" />



                <EditText
                android:id="@+id/edtCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint=" CPF ou CNPJ "
                android:inputType="number"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtEmaileTele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/lbl_emailetele"
                android:textColor="#000000"
                android:textStyle="bold"



            <EditText
                android:id="@+id/edtEmailCadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint="  E-mail "
                android:inputType="text"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtTeleddd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint="  Celular com DDD "
                android:inputType="number"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtTelefixo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint="  Telefone Fixo  "
                android:inputType="number"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />



                <TextView
                    android:id="@+id/txtEndereco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/lbl_endereco"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtEndereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:fontFamily="@font/fontawesome_font"
                    android:hint="  Logradouro (rua)  "
                    android:inputType="text"
                    android:maxLength="18"
                    android:textSize="22dp"
                    android:textStyle="bold" />

            <EditText
                android:id="@+id/edtNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint="  Numero "
                android:inputType="number"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtComplemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint="  Complemento "
                android:inputType="text"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint="  Bairro "
                android:inputType="text"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint="  Cidade "
                android:inputType="text"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint="  Estado "
                android:inputType="text"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtAniversario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/lbl_aniversario"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtAniversario"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:fontFamily="@font/fontawesome_font"
                android:hint=" Anotações "
                android:inputType="text"
                android:maxLength="18"
                android:textSize="22dp"
                android:textStyle="bold" />

            <EditText
                android:textSize="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=" O cliente não vera essas anotações " />




        </LinearLayout>


    </ScrollView>










    <LinearLayout
        android:id="@+id/rodape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#FFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btEntrar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:backgroundTint="#3F3A98"
            android:text="@string/btn_salvar"
            android:textStyle="bold" />



    </LinearLayout>


</RelativeLayout>





